fixed title spacing

--- a/main.css
+++ b/main.css
@@ -89,11 +89,12 @@ section{
 }
   
   .title{
-    padding-top: 3rem;
+    padding-top: 5rem;
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 700;
-    font-size: 3rem;
+    font-size: 4rem;
+    line-height: 4.5rem;
     color: white;
   }
   .subtitle{
@@ -101,7 +102,7 @@ section{
     font-style: normal;
     font-weight: 400;
     font-size: 1.25rem;
-    margin-top: -.75rem;
+    margin-top: .75rem;
     color:white;
   }
   
@@ -193,6 +194,7 @@ section{
     font-style: normal;
     font-weight: 700;
     font-size: 2.5rem;
+    line-height: 2.5rem;
     color: white;
     text-align:center;
   }
@@ -204,6 +206,7 @@ section{
     font-size: 1rem;
     color:white;
     padding-bottom: 1.5rem;
+    margin-top: 1rem;
     text-align: center;
   }
 .bottom-squiggle {
